kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vray
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
